# afp-project

./: .gitignore  Notes.md  TODO.MD
artifact/: .agda-lib  Balance.agda  Combine.agda  Construction.agda  Conversion.agda  Debugging.agda  DeletionUpdate.agda  Filter.agda  Folds.agda  Indexed.agda  Insertion.agda  Main.agda  MinMax.agda  Query.agda  Submap.agda  Traversal.agda  main.agda
artifact/Tests/: TestCases.agda  TestCombine.agda  TestConstruction.agda  TestConversion.agda  TestDebugging.agda  TestDeletionUpdate.agda  TestFilter.agda  TestFolds.agda  TestIndexed.agda  TestInsertion.agda  TestMinMax.agda  TestQuery.agda  TestSubmap.agda  TestTraversal.agda  Valid.agda
artifact/src/: Main.agda
artifact/src/BalancedMap/: Balance.agda  Insert.agda  Main.agda  Map.agda  Workspace.agda
artifact/src/Benchmarks/: Map.agda  Map.hs  README.md  bench.cabal  benchmarks.bat  out.csv
artifact/src/Benchmarks/MAlonzo/: RTE.hi
artifact/src/Benchmarks/MAlonzo/Code/Agda/: Primitive.hi
artifact/src/Benchmarks/MAlonzo/Code/Agda/Builtin/: Bool.hi  Equality.hi  List.hi  Maybe.hi
artifact/src/Benchmarks/MAlonzo/Code/Benchmarks/: Map.hi  Map.hs
artifact/src/Benchmarks/MAlonzo/Code/Map/: Construction.hi  Construction.hs  Insertion.hi  Insertion.hs  Map.hi  Map.hs  QQuery.hi  QQuery.hs
artifact/src/Benchmarks/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
final/: TODO.md  main.bib  main.tex  tmp_bench.tex
proposal/: main.bib  main.tex
template/: lipics-v2021.cls
update/: main.tex
(+110 files in other folders)
