name:                bench
version:             0
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends: base
  default-language: Haskell2010

benchmark map
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  ghc-options:       -Wall -O2 -rtsopts
  main-is:           Map.hs
  other-modules: Common
  build-depends:     base
                   , bytestring
                   , ghc-prim
                   , criterion
                   , deepseq
                   , containers
                   , unordered-containers
                   , bytestring-trie
                   , random, directory
                   , hashtables
                   , text 

executable report
  default-language: Haskell2010
  ghc-options:       -Wall -O2 -rtsopts
  main-is:           Report.hs
  build-depends:     base
                   , bytestring, directory
                   , vector
                   , ghc-prim
                   , criterion
                   , deepseq
                   , containers
                   , csv
